Remove some `Collections` usage
Signed-off-by: TheMode <themode@outlook.fr>